--- a/app/.env.local
+++ b/app/.env.local
@@ -1,4 +1,4 @@
     API_URI='https://weather-backend-6kka.onrender.com'
     UNSPLASH_ID=731303
-    UNSPLASH_ACCESS='Ko6Z_4ZzIUiN7JzHnidZf_eYmIeGqYNfscpFAemWYUw'
-    UNSPLASH_SECRET='8XpJqcjG2yM-lWz8tETTpOHfoiTGdLuRXOhu1OY1wjc'
+    UNSPLASH_ACCESS='add here'
+    UNSPLASH_SECRET='add here'
